driver info updating

--- a/html/driver_charles.html
+++ b/html/driver_charles.html
@@ -53,147 +53,147 @@
           <tr>
             <td>1</td>
             <td>Australian GP</td>
-            <td>18</td>
-            <td>2nd</td>
+            <td>4</td>
+            <td>8th</td>
           </tr>
           <tr>
             <td>2</td>
             <td>Chinese GP</td>
-            <td>18</td>
-            <td>4th</td>
+            <td>4</td>
+            <td>DSQ</td>
           </tr>
           <tr>
             <td>3</td>
             <td>Japanese GP</td>
-            <td>25</td>
-            <td>1st</td>
+            <td>12</td>
+            <td>4th</td>
           </tr>
           <tr>
             <td>4</td>
             <td>Bahrain GP</td>
-            <td>8</td>
-            <td>6th</td>
+            <td>12</td>
+            <td>4th</td>
           </tr>
           <tr>
             <td>5</td>
             <td>Saudi Arabian GP</td>
-            <td>18</td>
-            <td>2nd</td>
+            <td>15</td>
+            <td>3rd</td>
           </tr>
           <tr>
             <td>6</td>
             <td>Miami GP</td>
-            <td>12</td>
-            <td>4th</td>
+            <td>6</td>
+            <td>7th</td>
           </tr>
           <tr>
             <td>7</td>
             <td>Emilia-Romagna GP</td>
-            <td>25</td>
-            <td>1st</td>
+            <td>8</td>
+            <td>6th</td>
           </tr>
           <tr>
             <td>8</td>
             <td>Monaco GP</td>
-            <td>12</td>
-            <td>4th</td>
+            <td>15</td>
+            <td>2nd</td>
           </tr>
           <tr>
             <td>9</td>
             <td>Spanish GP</td>
-            <td>1</td>
-            <td>10th</td>
+            <td>15</td>
+            <td>3rd</td>
           </tr>
           <tr>
             <td>10</td>
             <td>Canadian GP</td>
-            <td>18</td>
-            <td>2nd</td>
+            <td>10</td>
+            <td>5th</td>
           </tr>
           <tr>
             <td>11</td>
             <td>Austrian GP</td>
-            <td>0</td>
-            <td>DNF</td>
+            <td>15</td>
+            <td>3rd</td>
           </tr>
           <tr>
             <td>12</td>
             <td>British GP</td>
-            <td>10</td>
-            <td>5th</td>
+            <td>0</td>
+            <td>14th</td>
           </tr>
           <tr>
             <td>13</td>
             <td>Belgian GP</td>
             <td>20</td>
-            <td>4th</td>
+            <td>3rd</td>
           </tr>
           <tr>
             <td>14</td>
             <td>Hungarian GP</td>
-            <td>2</td>
-            <td>9th</td>
+            <td>12</td>
+            <td>4th</td>
           </tr>
           <tr>
             <td>15</td>
             <td>Dutch GP</td>
-            <td>18</td>
-            <td>2nd</td>
+            <td>0</td>
+            <td>DNF</td>
           </tr>
           <tr>
             <td>16</td>
             <td>Italian GP</td>
-            <td>25</td>
-            <td>1st</td>
+            <td>12</td>
+            <td>4th</td>
           </tr>
           <tr>
             <td>17</td>
             <td>Azerbaijan GP</td>
-            <td>25</td>
-            <td>1st</td>
+            <td>2</td>
+            <td>9th</td>
           </tr>
           <tr>
             <td>18</td>
             <td>Singapore GP</td>
-            <td>18</td>
-            <td>2nd</td>
+            <td>8</td>
+            <td>6th</td>
           </tr>
           <tr>
             <td>19</td>
             <td>United States GP</td>
-            <td>33</td>
-            <td>1st</td>
+            <td>19</td>
+            <td>3rd</td>
           </tr>
           <tr>
             <td>20</td>
             <td>Mexican GP</td>
-            <td>15</td>
-            <td>3rd</td>
+            <td>18</td>
+            <td>2nd</td>
           </tr>
 
           <tr>
             <td>21</td>
             <td>Brazilian GP</td>
-            <td>20</td>
-            <td>3rd</td>
+            <td>4</td>
+            <td>DNF</td>
           </tr>
           <tr>
             <td>22</td>
             <td>Las Vegas GP</td>
-            <td>25</td>
-            <td>1st</td>
+            <td>12</td>
+            <td>4th</td>
           </tr>
           <tr>
             <td>23</td>
             <td>Qatar GP</td>
-            <td>25</td>
-            <td>1st</td>
+            <td>4</td>
+            <td>8th</td>
           </tr>
           <tr>
             <td>24</td>
             <td>Abu Dhabi GP</td>
-            <td>TBD</td>
-            <td>TBD</td>
+            <td>12</td>
+            <td>4th</td>
           </tr>
         </tbody>
       </table>
@@ -215,84 +215,60 @@
         </thead>
         <tbody>
           <tr>
-            <td>2015</td>
-            <td>Torro Rosso</td>
-            <td>0</td>
-            <td>0</td>
-            <td>49</td>
-            <td>12th</td>
-          </tr>
-          <tr>
-            <td>2016</td>
-            <td>Red Bull Racing</td>
-            <td>1</td>
-            <td>7</td>
-            <td>204</td>
-            <td>5th</td>
-          </tr>
-          <tr>
-            <td>2017</td>
-            <td>Red Bull Racing</td>
-            <td>2</td>
-            <td>4</td>
-            <td>168</td>
-            <td>6th</td>
-          </tr>
-          <tr>
             <td>2018</td>
-            <td>Red Bull Racing</td>
-            <td>2</td>
-            <td>11</td>
-            <td>249</td>
-            <td>4th</td>
+            <td>Alfa Romeo Sauber</td>
+            <td>0</td>
+            <td>0</td>
+            <td>39</td>
+            <td>13th</td>
           </tr>
           <tr>
             <td>2019</td>
-            <td>Red Bull Racing</td>
-            <td>3</td>
-            <td>9</td>
-            <td>278</td>
-            <td>3rd</td>
+            <td>Ferrari</td>
+            <td>2</td>
+            <td>10</td>
+            <td>264</td>
+            <td>4th</td>
           </tr>
           <tr>
             <td>2020</td>
-            <td>Red Bull Racing</td>
+            <td>Ferrari</td>
+            <td>0</td>
             <td>2</td>
-            <td>11</td>
-            <td>278</td>
-            <td>3rd</td>
+            <td>98</td>
+            <td>8th</td>
           </tr>
           <tr>
             <td>2021</td>
-            <td>Red Bull Racing</td>
-            <td>10</td>
-            <td>18</td>
-            <td>395.5</td>
-            <td>1st</td>
+            <td>Ferrari</td>
+            <td>0</td>
+            <td>1</td>
+            <td>159</td>
+            <td>7th</td>
           </tr>
           <tr>
             <td>2022</td>
-            <td>Red Bull Racing</td>
-            <td>15</td>
-            <td>17</td>
-            <td>454</td>
-            <td>1st</td>
+            <td>Ferrari</td>
+            <td>3</td>
+            <td>11</td>
+            <td>308</td>
+            <td>2nd</td>
           </tr>
           <tr>
             <td>2023</td>
-            <td>Red Bull Racing</td>
-            <td>19</td>
-            <td>21</td>
-            <td>575</td>
-            <td>1st</td>
+            <td>Ferrari</td>
+            <td>0</td>
+            <td>6</td>
+            <td>206</td>
+            <td>5th</td>
           </tr>
           <tr>
             <td>2024</td>
-            <td>Red Bull Racing</td>
-            <td>9</td>
-            <td>14</td>
-            <td>437</td>
-            <td>1st</td>
+            <td>Ferrari</td>
+            <td>3</td>
+            <td>13</td>
+            <td>356</td>
+            <td>3rd</td>
           </tr>
         </tbody>
       </table>
