--- a/html/alpine.html
+++ b/html/alpine.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/AlpineLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-alpine">
       <h1 class="team-name">BWT Alpine F1 Team</h1>
       <p class="team-base">Enstone, United Kingdom</p>
     </header>
