--- a/html/astonmartin.html
+++ b/html/astonmartin.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/AstonMartinLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-astonmartin">
       <h1 class="team-name">Aston Martin Aramco Honda</h1>
       <p class="team-base">Silverstone, United Kingdom</p>
     </header>
