--- a/html/cadillac.html
+++ b/html/cadillac.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/CadillacLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-cadillac">
       <h1 class="team-name">Cadillac Formula 1 Team</h1>
       <p class="team-base">Brackley, United Kingdom</p>
     </header>
@@ -36,7 +35,7 @@
       </div>
 
       <div class="info-card">
-        <h2>2025 Drivers</h2>
+        <h2>2026 Drivers</h2>
         <div class="drivers-list">
           <a href="driver_valtteri.html" class="driver-item">
             <img src="../images/ValterriBottas.png" />
