--- a/html/driver_lando.html
+++ b/html/driver_lando.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/LandoNorris.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-lando">
       <div class="driver-basic-info">
         <h1 class="driver-name">Lando Norris</h1>
         <p class="driver-team">McLaren Mastercard Formula 1 Team</p>
