--- a/html/ferrari.html
+++ b/html/ferrari.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/FerrariLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-ferrari">
       <h1 class="team-name">Scuderia Ferrari HP</h1>
       <p class="team-base">Maranello, Italy</p>
     </header>
