--- a/html/mclaren.html
+++ b/html/mclaren.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/McLarenLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-mclaren">
       <h1 class="team-name">McLaren Mastercard Formula 1 Team</h1>
       <p class="team-base">Woking, United Kingdom</p>
     </header>
