--- a/html/mercedes.html
+++ b/html/mercedes.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/MercedesLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-mercedes">
       <h1 class="team-name">Mercedes-AMG Petronas</h1>
       <p class="team-base">Brackley, United Kingdom</p>
     </header>
