--- a/html/redbull.html
+++ b/html/redbull.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/RedBullLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-redbull">
       <h1 class="team-name">Oracle Red Bull Racing</h1>
       <p class="team-base">Brackley, United Kingdom</p>
     </header>
