--- a/html/driver_alex.html
+++ b/html/driver_alex.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/AlexAlbon.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-alex">
       <div class="driver-basic-info">
         <h1 class="driver-name">Alexander Albon</h1>
         <p class="driver-team">Atlassian Williams F1 Team</p>
