--- a/html/driver_carlos.html
+++ b/html/driver_carlos.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/CarlosSainz.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-carlos">
       <div class="driver-basic-info">
         <h1 class="driver-name">Carlos Sainz Jr.</h1>
         <p class="driver-team">Atlassian Williams F1 Team</p>
