--- a/html/driver_charles.html
+++ b/html/driver_charles.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/CharlesLeclerc.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-charles">
       <div class="driver-basic-info">
         <h1 class="driver-name">Charles Leclerc</h1>
         <p class="driver-team">Scuderia Ferrari HP</p>
