--- a/html/driver_george.html
+++ b/html/driver_george.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/GeorgeRussell.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-george">
       <div class="driver-basic-info">
         <h1 class="driver-name">George Russell</h1>
         <p class="driver-team">Mercedes-AMG Petronas</p>
