--- a/html/driver_isack.html
+++ b/html/driver_isack.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/IsackHadjar.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-isack">
       <div class="driver-basic-info">
         <h1 class="driver-name">Isack Hadjar</h1>
         <p class="driver-team">Oracle Red Bull Racing</p>
