--- a/html/driver_lewis.html
+++ b/html/driver_lewis.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HEADER SECTION -->
-    <header class="driver-header">
-      <img src="../images/LewisHamilton.png" alt="Driver Photo" class="driver-photo" />
+    <header class="driver-header-lewis">
       <div class="driver-basic-info">
         <h1 class="driver-name">Lewis Hamilton</h1>
         <p class="driver-team">Scuderia Ferrari HP</p>
