--- a/html/williams.html
+++ b/html/williams.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/WilliamsLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-williams">
       <h1 class="team-name">Atlassian Williams F1 Team</h1>
       <p class="team-base">Brackley, United Kingdom</p>
     </header>
