finishing off team styling

--- a/html/haas.html
+++ b/html/haas.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/HaasLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-haas">
       <h1 class="team-name">TGR Haas F1 Team</h1>
       <p class="team-base">Kannapolis, United States</p>
     </header>
