--- a/html/racingbulls.html
+++ b/html/racingbulls.html
@@ -19,8 +19,7 @@
     </nav>
 
     <!-- HERO / HEADER SECTION -->
-    <header class="team-header">
-      <img src="../images/RacingBullsLogo.png" alt="Team Logo" class="team-logo" />
+    <header class="team-header-racingbulls">
       <h1 class="team-name">Visa Cash App Racing Bulls F1 Team</h1>
       <p class="team-base">Brackley, United Kingdom</p>
     </header>
