--- a/html/driver_lando.html
+++ b/html/driver_lando.html
@@ -269,10 +269,25 @@
     <section class="driver-bio">
       <h2>Biography</h2>
       <p>
-        Lewis Hamilton is one of the most successful drivers in Formula 1 history,
-        known for his raw speed, racecraft, and consistency. He debuted in 2007 with
-        McLaren and won his first championship in 2008. His dominance in the
-        hybrid era with Mercedes earned him six more titles.
+        Lando Norris is a British racing driver who competes in Formula One for McLaren.
+        Norris won the Formula One World Drivers' Championship in 2025 with McLaren, 
+        and has won 11 Grands Prix across seven seasons.<br>
+        Born in Bristol and raised in Glastonbury to an English father and Belgian mother, 
+        Norris began competitive kart racing aged eight. After a successful karting career—culminating in his 
+        victory at the direct-drive Karting World Championship in 2014.<br>
+        Norris graduated to junior formulae. He won his first title at the 2015 MSA Formula Championship with
+        Carlin. He then won the Toyota Racing Series, Formula Renault Eurocup, and Formula Renault NEC in 2016, 
+        receiving the Autosport BRDC Award that year. Norris won the FIA Formula 3 European Championship in 2017, 
+        and finished runner-up to George Russell in the FIA Formula 2 Championship in 2018, both with Carlin.<br>
+        A member of the McLaren Young Driver Programme since 2017, Norris joined McLaren in 2019 to partner Carlos Sainz Jr.,
+        making his Formula One debut at the Australian Grand Prix. He achieved his maiden podium finish and fastest lap at the 
+        season-opening Austrian Grand Prix in 2020, before achieving his maiden pole position at the Russian Grand Prix in 2021,
+        amongst several further podiums. Following another podium in 2022, he took seven across his 2023 campaign. In 2024, Norris 
+        achieved his maiden win at the Miami Grand Prix, repeating this feat three times as he finished runner-up to Max Verstappen 
+        in the World Drivers' Championship. He took seven further victories in 2025, including his home Grand Prix in Britain, as he 
+        won his maiden World Drivers' Championship in a title battle with Verstappen and teammate Oscar Piastri.<br>
+        As of the 2025 Abu Dhabi Grand Prix, Norris has achieved 11 race wins, 16 pole positions, 18 fastest laps, and 44 podiums in 
+        Formula One. Norris is contracted to remain at McLaren until at least the end of the 2027 season.
       </p>
     </section>
 
