--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
           <li><a href="drivers.html">Drivers</a></li>
           <li><a href="teams.html">Teams</a></li>
           <li><a href="standings.html">Standings</a></li>
+          <li><a href="races.html">Races</a></li>
         </ul>
       </nav>
     </header>
